update principal html

--- a/themes/uoc/i18n/ca.toml
+++ b/themes/uoc/i18n/ca.toml
@@ -95,6 +95,7 @@
 [uoc_ri_cercadortab_text] other = "Prefereixes fer una cerca per paraula?"
 
 [uoc_ri_cercador_cercaper] other = "Cerca per:"
+[uoc_ri_cercador_cercapersector] other = "Cerca per sector productiu:"
 [uoc_ri_cercador_esborrafiltres] other = "Esborrar filtres"
 [uoc_ri_cercador_cercar] other = "Cercar"
 
