--- a/themes/uoc/i18n/ca.toml
+++ b/themes/uoc/i18n/ca.toml
@@ -92,6 +92,7 @@
 [uoc_ri_menuitem_contact] other = "Contacte"
 
 [uoc_ri_cercadortab_filtres] other = "Vols conèixer qui i què s'investiga a la UOC?"
+[uoc_ri_cercadortab_sectors] other = "Busques una solució innovadora per a la teva empresa?"
 [uoc_ri_cercadortab_text] other = "Prefereixes fer una cerca per paraula?"
 
 [uoc_ri_cercador_cercaper] other = "Cerca per:"
