--- a/themes/uoc/i18n/es.toml
+++ b/themes/uoc/i18n/es.toml
@@ -92,6 +92,7 @@
 [uoc_ri_menuitem_contact] other = "Contacto"
 
 [uoc_ri_cercadortab_filtres] other = "¿Quieres saber qué y quién investiga en la UOC?"
+[uoc_ri_cercadortab_sectors] other = "¿Buscas una solución innovadora para tú empresa?"
 [uoc_ri_cercadortab_text] other = "¿Prefieres hacer una búsqueda por palabras?"
 
 [uoc_ri_cercador_cercaper] other = "Busca por:"
