--- a/themes/uoc/i18n/en.toml
+++ b/themes/uoc/i18n/en.toml
@@ -92,6 +92,7 @@
 [uoc_ri_menuitem_contact] other = "Contact us"
 
 [uoc_ri_cercadortab_filtres] other = "Do you want to know what and who researches in UOC?"
+[uoc_ri_cercadortab_sectors] other = "Do you looking for an innovate solution for your business?"
 [uoc_ri_cercadortab_text] other = "Do your prefer to do a text search?"
 
 [uoc_ri_cercador_cercaper] other = "Search for:"
