--- a/themes/uoc/i18n/ca.toml
+++ b/themes/uoc/i18n/ca.toml
@@ -105,9 +105,15 @@
 [uoc_ri_cercador_filtres_unesco] other = "Codi UNESCO"
 [uoc_ri_cercador_filtres_centre] other = "Selecciona el centre:"
 [uoc_ri_cercador_filtres_visualitzacio] other = "Visualitza els resultats per:"
+[uoc_ri_cercador_filtres_sectors_productius] other = "Sectors productius"
 
 [uoc_ri_cercador_grups] other = "Grups de recerca"
 [uoc_ri_cercador_investigadors] other = "Investigadors"
+[uoc_ri_cercador_solucions] other = "Solucions Innovadores"
+[uoc_ri_cercador_solucions_tec] other ="Solucions Tecnològiques"
+[uoc_ri_cercador_solucions_patents] other = "Patents"
+[uoc_ri_cercador_solucions_serveis] other = "Serveis a l'empresa"
+[uoc_ri_cercador_spin_off] other = "Spin-Offs"
 
 [uoc_ri_mapaambits_cercaper_especialitzacio] other = "Cerca per àmbit d'especialització"
 [uoc_ri_mapaambits_cercaper_ambit] other = "Cerca per àmbit"
