--- a/themes/uoc/i18n/ca.toml
+++ b/themes/uoc/i18n/ca.toml
@@ -174,3 +174,5 @@
 
 [uoc_ri_esdeveniment_On] other = "On"
 [uoc_ri_esdeveniment_Quan] other = "Quan"
+
+[uoc_ri_casos_link] other = "Enllaç al cas d'èxit"
