--- a/themes/uoc/i18n/es.toml
+++ b/themes/uoc/i18n/es.toml
@@ -116,7 +116,6 @@
 [uoc_ri_cercador_solucions_serveis] other = "Servicio a la empresa"
 [uoc_ri_cercador_spin_off] other = "Spin-Offs"
 
-
 [uoc_ri_mapaambits_cercaper_especialitzacio] other = "Busca por ámbito de especialización"
 [uoc_ri_mapaambits_cercaper_ambit] other = "Busca por ámbito"
 [uoc_ri_mapaambits_cercaper_ambit_titol] other = "Ámbitos generales"
@@ -172,3 +171,8 @@
 [uoc_ri_difusio_novetats] other = "Consulta las últimas novedades, noticias y casos de éxito de la R&I en la UOC"
 [uoc_ri_difusio_noticia] other = "Notícia"
 [uoc_ri_difusio_esdeveniment] other = "Evento"
+
+[uoc_ri_esdeveniment_On] other = "Dónde"
+[uoc_ri_esdeveniment_Quan] other = "Cuándo"
+
+[uoc_ri_casos_link] other = "Enlace al caso de éxito"
