--- a/themes/uoc/i18n/es.toml
+++ b/themes/uoc/i18n/es.toml
@@ -172,7 +172,11 @@
 [uoc_ri_difusio_noticia] other = "Notícia"
 [uoc_ri_difusio_esdeveniment] other = "Evento"
 
+[uoc_ri_noticia] other = "#Notícia"
+[uoc_ri_esdeveniment] other = "#Evento"
+
 [uoc_ri_esdeveniment_On] other = "Dónde"
 [uoc_ri_esdeveniment_Quan] other = "Cuándo"
 
 [uoc_ri_casos_link] other = "Enlace al caso de éxito"
+
