--- a/themes/uoc/i18n/ca.toml
+++ b/themes/uoc/i18n/ca.toml
@@ -53,6 +53,13 @@
 [uoc_grup_footer_ri_collab] other = "Règim de col·laboració" 
 [uoc_grup_footer_ri_researchers] other = "Personal investigador" 
 [uoc_grup_footer_ri_visitants] other = "Professors visitants" 
+[uoc_grup_footer_ri_org_href] other = "https://research.uoc.edu/portal/ca/ri/investigadors/organitzacio/index.html" 
+[uoc_grup_footer_ri_transfer_href] other = "https://research.uoc.edu/portal/ca/ri/colaboracio/transferencia/index.html" 
+[uoc_grup_footer_ri_collab_href] other = "https://research.uoc.edu/portal/ca/ri/colaboracio/regims-colaboracio/index.html" 
+[uoc_grup_footer_ri_researchers_href] other = "" 
+[uoc_grup_footer_ri_visitants_href] other = "https://research.uoc.edu/portal/ca/ri/investigadors/professor-visitant/index.html" 
+
+
 
 [uoc_grup_footer_explore] other = "Explora" 
 [uoc_grup_footer_explore_days] other = "Jornadas"
@@ -61,19 +68,34 @@
 [uoc_grup_footer_explore_memos] other = "Memòries d'R+I"
 [uoc_grup_footer_explore_catalog] other = "Catàleg d'oferta científico técnica" 
 
+[uoc_grup_footer_explore_days_href] other = "https://research.uoc.edu/opencms_portal2/opencms/CA/ri/agenda/list.html"
+[uoc_grup_footer_explore_hubbik_href] other = "https://hubbik.uoc.edu/ca"
+[uoc_grup_footer_explore_prod_href] other = "https://research.uoc.edu/opencms_portal2/opencms/CA/ri/projectes-publicacions/publicacions/list.html"
+[uoc_grup_footer_explore_projects_href] other = "https://research.uoc.edu/opencms_portal2/opencms/CA/ri/projectes-publicacions/projectes/list.html"
+[uoc_grup_footer_explore_memos_href] other = "https://research.uoc.edu/opencms_portal2/opencms/CA/ri/projectes-publicacions/memories/list.html"
+[uoc_grup_footer_explore_catalog_href] other = "http://openaccess.uoc.edu/webapps/o2/?locale=es" 
+
 [uoc_grup_footer_support] other = "Suport activitat R&I" 
 [uoc_grup_footer_support_library] other = "Biblioteca de recerca" 
 [uoc_grup_footer_support_vigilance] other = "Vigilància tecnològica" 
 [uoc_grup_footer_support_intranet] other = "La intranet de l'OSRT" 
+[uoc_grup_footer_support_library_href] other = "http://biblioteca.uoc.edu/ca/recerca" 
+[uoc_grup_footer_support_vigilance_href] other = "https://research.uoc.edu/portal/ca/ri/activitat-rdi/vigilancia-tecnologica/index.html" 
+[uoc_grup_footer_support_intranet_href] other = "" 
 
 [uoc_grup_footer_osrt] other = "L'OSRT" 
 [uoc_grup_footer_osrt_contact] other = "Contacta'ns" 
 [uoc_grup_footer_osrt_team] other = "Equip" 
+[uoc_grup_footer_osrt_team_href] other = "https://research.uoc.edu/portal/ca/ri/activitat-rdi/equip/index.html" 
 
 [uoc_grup_footer_about] other = "Sobre el web" 
 [uoc_grup_footer_about_rss] other = "RSS" 
 [uoc_grup_footer_about_legal] other = "Avís legal" 
 [uoc_grup_footer_about_access] other = "Accessibilitat" 
+[uoc_grup_footer_about_hr] other = "HR Excellence in Research" 
+[uoc_grup_footer_about_legal_href] other = "https://www.uoc.edu/portal/ca/_peu/avis_legal/index.html" 
+[uoc_grup_footer_about_access_href] other = "https://www.uoc.edu/portal/ca/_peu/sobre_el_web/index.html" 
+[uoc_grup_footer_about_hr_href] other = "https://research.uoc.edu/portal/ca/ri/activitat-rdi/hrs4r/index.html" 
 
 [uoc_grup_footer_social] other = "Xarxes socials (ca)" 
 [uoc_grup_footer_social_more] other = "Més" 
@@ -99,11 +121,12 @@
 [uoc_ri_cercador_cercaper] other = "Cerca per:"
 [uoc_ri_cercador_cercapersector] other = "Cerca per sector productiu:"
 [uoc_ri_cercador_esborrafiltres] other = "Esborrar filtres"
-[uoc_ri_cercador_cercar] other = "Cercar"
+[uoc_ri_cercador_cercar] other = "Paraules a cercar"
 
 [uoc_ri_cercador_filtres_ambitsespecialitzacio] other = "Àmbits d'especialització"
 [uoc_ri_cercador_filtres_ods] other = "Objectius ODS"
 [uoc_ri_cercador_filtres_unesco] other = "Codi UNESCO"
+[uoc_ri_cercador_filtres_unesco_placeholder] other = "Cerca per codi"
 [uoc_ri_cercador_filtres_centre] other = "Selecciona el centre:"
 [uoc_ri_cercador_filtres_visualitzacio] other = "Visualitza els resultats per:"
 [uoc_ri_cercador_filtres_sectors_productius] other = "Sectors productius"
@@ -147,6 +170,15 @@
 [uoc_contact_fields_textarea] other = "La teva consulta..."
 [uoc_contact_send] other = "Envia la consulta"
 [uoc_contact_selecciona] other = "Selecciona"
+
+[uoc_pagination_next] other = "Següent"
+[uoc_pagination_prev] other = "Anterior"
+
+[uoc_search_noresults] other = "No s'ha trobat resultats amb els filtres indicats."
+[uoc_search_connerror] other = "No s'ha pogut comunicar amb el servei de cerca."
+[uoc_language_change] other = "Canvi d'idioma"
+[uoc_language_close] other = "Tancar idioma (x)"
+[uoc_mainmenu_label] other = "Menú principal"
 
 [uoc_ri_tipologia] other = 'Tipología'
 [uoc_ri_sector] other = 'Sector'
