--- a/themes/uoc/i18n/en.toml
+++ b/themes/uoc/i18n/en.toml
@@ -9,78 +9,100 @@
 [uoc_meta_keywords] other = "recerca, innovacio, transferencia, research, r&i, in3, eLC, escola de doctorat, uoc"
 [uoc_meta_description] other = "Coneix UOC R&I i l'activitat de recerca que se'n deriva. Innovació, recerca, transferència..."
 
-[uoc_head_title] other = "UOC R&I - UOC (Universitat Oberta de Catalunya)"
-[uoc_head_description] other = "La UOC és una universitat online que ofereix cursos de grau, postgraus, màsters i idiomes"
+[uoc_head_title] other = "UOC R&I"
+[uoc_head_description] other = "The UOC is an online university that offers undergraduate, postgraduate, master's and language courses"
 
 [uoc_title] other = "Universitat Oberta de Catalunya"
 [uoc_title_menu] other = "Universitat Oberta<br aria-hidden='true'>de Catalunya"
 [uoc_title_ri] other = "UOC R&I"
-[uoc_social_more] other = "Veure més xarxes"
-[uoc_social] other = "A la xarxa"
+[uoc_social_more] other = "See more networks"
+[uoc_social] other = "On the Net"
 
 [uoc_lang] other = "(en)"
 [uoc_lang_button] other = "EN"
 
-[uoc_lang_catalan] other = "Català"
-[uoc_lang_spanish] other = "Castellà"
-[uoc_lang_english] other = "Inglés"
+[uoc_lang_catalan] other = "Catalan"
+[uoc_lang_spanish] other = "Spanish"
+[uoc_lang_english] other = "English"
 
-[uoc_grup_expert] other = "Expert en"
+[uoc_grup_expert] other = "Expert in"
 
-[uoc_grup_investigator] other = "Investigador principal" 
-[uoc_grup_ambit] other = "Àmbit" 
+[uoc_grup_investigator] other = "Main investigator" 
+[uoc_grup_ambit] other = "Area" 
 [uoc_grup_center] other = "Centre" 
-[uoc_grup_code_unesco] other = "Col·labora amb" 
+[uoc_grup_code_unesco] other = "Collaborates with" 
 
 [uoc_grup_ods] other = "ODS" 
 
-[uoc_grup_menu_about] other = "Sobre el grup" 
-[uoc_grup_menu_members] other = "Membres" 
-[uoc_grup_menu_research] other = "Recerca i transferència" 
-[uoc_grup_menu_publications] other = "Publicacions" 
-[uoc_grup_menu_contact] other = "Contacte" 
+[uoc_grup_menu_about] other = "About the group" 
+[uoc_grup_menu_members] other = "Members" 
+[uoc_grup_menu_research] other = "Research and transfer" 
+[uoc_grup_menu_publications] other = "Published works" 
+[uoc_grup_menu_contact] other = "Contact" 
 
-[uoc_grup_members_main] other = "Investigador principal" 
+[uoc_grup_members_main] other = "Main investigator" 
 
-[uoc_grup_research_lines] other = "Línies de Recerca del Grup" 
-[uoc_grup_research_projects] other = "Projectes" 
-[uoc_grup_research_transfer] other = "Transferència" 
-[uoc_grup_research_other] other = "Altres activitats de recerca" 
+[uoc_grup_research_lines] other = "Group Research Lines" 
+[uoc_grup_research_projects] other = "Projects" 
+[uoc_grup_research_transfer] other = "Transfer" 
+[uoc_grup_research_other] other = "Other research activities" 
 
 [uoc_grup_footer_ri] other = "UOC R&I"
-[uoc_grup_footer_ri_org] other = "Com s'organitza l'R&I" 
-[uoc_grup_footer_ri_transfer] other = "Transferència" 
-[uoc_grup_footer_ri_collab] other = "Règim de col·laboració" 
-[uoc_grup_footer_ri_researchers] other = "Personal investigador" 
-[uoc_grup_footer_ri_visitants] other = "Professors visitants" 
+[uoc_grup_footer_ri_org] other = "How R&I is organised" 
+[uoc_grup_footer_ri_transfer] other = "Transfer" 
+[uoc_grup_footer_ri_collab] other = "Cooperation systems" 
+[uoc_grup_footer_ri_researchers] other = "Research staff" 
+[uoc_grup_footer_ri_visitants] other = "Visiting lecturers" 
+[uoc_grup_footer_ri_org_href] other = "https://research.uoc.edu/portal/en/ri/investigadors/organitzacio/index.html" 
+[uoc_grup_footer_ri_transfer_href] other = "https://research.uoc.edu/portal/en/ri/colaboracio/transferencia/index.html" 
+[uoc_grup_footer_ri_collab_href] other = "https://research.uoc.edu/portal/en/ri/colaboracio/regims-colaboracio/index.html" 
+[uoc_grup_footer_ri_researchers_href] other = "" 
+[uoc_grup_footer_ri_visitants_href] other = "https://research.uoc.edu/portal/en/ri/investigadors/professor-visitant/index.html" 
 
-[uoc_grup_footer_explore] other = "Explora" 
-[uoc_grup_footer_explore_days] other = "Jornadas"
-[uoc_grup_footer_explore_prod] other = "Producció científica"
-[uoc_grup_footer_explore_projects] other = "Projectes d'R+I"
-[uoc_grup_footer_explore_memos] other = "Memòries d'R+I"
-[uoc_grup_footer_explore_catalog] other = "Catàleg d'oferta científico técnica" 
 
-[uoc_grup_footer_support] other = "Suport activitat R&I" 
-[uoc_grup_footer_support_library] other = "Biblioteca de recerca" 
-[uoc_grup_footer_support_vigilance] other = "Vigilància tecnològica" 
-[uoc_grup_footer_support_intranet] other = "La intranet de l'OSRT" 
+[uoc_grup_footer_explore] other = "Explore" 
+[uoc_grup_footer_explore_days] other = "Diffusion and Events"
+[uoc_grup_footer_explore_hubbik] other = "Hubbik"
+[uoc_grup_footer_explore_prod] other = "Scientific production"
+[uoc_grup_footer_explore_projects] other = "R&I projects"
+[uoc_grup_footer_explore_memos] other = "R+D+I reports"
+[uoc_grup_footer_explore_catalog] other = "Institutional research repository" 
 
-[uoc_grup_footer_osrt] other = "L'OSRT" 
-[uoc_grup_footer_osrt_contact] other = "Contacta'ns" 
-[uoc_grup_footer_osrt_team] other = "Equip" 
+[uoc_grup_footer_explore_days_href] other = "https://research.uoc.edu/opencms_portal2/opencms/EN/ri/agenda/list.html"
+[uoc_grup_footer_explore_hubbik_href] other = "https://hubbik.uoc.edu/en"
+[uoc_grup_footer_explore_prod_href] other = "https://research.uoc.edu/opencms_portal2/opencms/EN/ri/projectes-publicacions/publicacions/list.html"
+[uoc_grup_footer_explore_projects_href] other = "https://research.uoc.edu/opencms_portal2/opencms/EN/ri/projectes-publicacions/projectes/list.html"
+[uoc_grup_footer_explore_memos_href] other = "https://research.uoc.edu/opencms_portal2/opencms/EN/ri/projectes-publicacions/memories/list.html"
+[uoc_grup_footer_explore_catalog_href] other = "http://openaccess.uoc.edu/webapps/o2/?locale=en"
 
-[uoc_grup_footer_about] other = "Sobre el web" 
+[uoc_grup_footer_support] other = "R&I Support Activity" 
+[uoc_grup_footer_support_library] other = "Research library" 
+[uoc_grup_footer_support_vigilance] other = "Technology surveillance" 
+[uoc_grup_footer_support_intranet] other = "The OSRT intranet" 
+[uoc_grup_footer_support_library_href] other = "http://biblioteca.uoc.edu/en/recerca" 
+[uoc_grup_footer_support_vigilance_href] other = "https://research.uoc.edu/portal/en/ri/activitat-rdi/vigilancia-tecnologica/index.html" 
+[uoc_grup_footer_support_intranet_href] other = "" 
+
+[uoc_grup_footer_osrt] other = "The OSRT" 
+[uoc_grup_footer_osrt_contact] other = "Contact us" 
+[uoc_grup_footer_osrt_team] other = "Team" 
+[uoc_grup_footer_osrt_team_href] other = "https://research.uoc.edu/portal/en/ri/activitat-rdi/equip/index.html" 
+
+[uoc_grup_footer_about] other = "About the website" 
 [uoc_grup_footer_about_rss] other = "RSS" 
-[uoc_grup_footer_about_legal] other = "Avís legal" 
-[uoc_grup_footer_about_access] other = "Accessibilitat" 
+[uoc_grup_footer_about_legal] other = "Legal notice" 
+[uoc_grup_footer_about_access] other = "Accessibility" 
+[uoc_grup_footer_about_hr] other = "HR Excellence in Research" 
+[uoc_grup_footer_about_legal_href] other = "https://www.uoc.edu/portal/en/_peu/avis_legal/index.html" 
+[uoc_grup_footer_about_access_href] other = "https://www.uoc.edu/portal/en/_peu/sobre_el_web/index.html" 
+[uoc_grup_footer_about_hr_href] other = "https://research.uoc.edu/portal/en/ri/activitat-rdi/hrs4r/index.html" 
 
-[uoc_grup_footer_social] other = "Xarxes socials (ca)" 
-[uoc_grup_footer_social_more] other = "Més" 
+[uoc_grup_footer_social] other = "Social networks (ca)" 
+[uoc_grup_footer_social_more] other = "More" 
 [uoc_grup_footer_social_twitter_account1] other = "@UOCorst" 
-[uoc_grup_footer_social_twitter_account2] other = "@UOCuniversitat" 
+[uoc_grup_footer_social_twitter_account2] other = "@UOC_research" 
 
-[uoc_grup_footer_links_new_window] other = "(El link s'obre en finestra nova)" 
+[uoc_grup_footer_links_new_window] other = "(The link opens in a new window)" 
 
 [uoc_grup_footer_links_acup] other = "Associació Catalana d'Universitats Públiques (ACUP)" 
 [uoc_grup_footer_links_acup_acronym] other = "ACUP" 
@@ -99,11 +121,12 @@
 [uoc_ri_cercador_cercaper] other = "Search for:"
 [uoc_ri_cercador_cercapersector] other = "Search for productive sector:"
 [uoc_ri_cercador_esborrafiltres] other = "Remove filters"
-[uoc_ri_cercador_cercar] other = "Search"
+[uoc_ri_cercador_cercar] other = "Searchwords"
 
 [uoc_ri_cercador_filtres_ambitsespecialitzacio] other = "Specialization areas"
 [uoc_ri_cercador_filtres_ods] other = "ODS Objectives"
 [uoc_ri_cercador_filtres_unesco] other = "UNESCO code"
+[uoc_ri_cercador_filtres_unesco_placeholder] other = "Search by UNESCO code"
 [uoc_ri_cercador_filtres_centre] other = "Select a centre:"
 [uoc_ri_cercador_filtres_visualitzacio] other = "View results by:"
 [uoc_ri_cercador_filtres_sectors_productius] other = "Productive Sectors"
@@ -148,6 +171,15 @@
 [uoc_contact_send] other = "Placeholder data"
 [uoc_contact_selecciona] other = "Select"
 
+[uoc_pagination_next] other = "Next"
+[uoc_pagination_prev] other = "Previous"
+
+[uoc_search_noresults] other = "No results found using current filters."
+[uoc_search_connerror] other = "No connection could be made since the service is not responding."
+[uoc_language_change] other = "Language switch"
+[uoc_language_close] other = "Close language (x)"
+[uoc_mainmenu_label] other = "Main menu"
+
 [uoc_ri_tipologia] other = 'Tipology'
 [uoc_ri_sector] other = 'Sector'
 [uoc_ri_centre] other = 'Center'
@@ -172,12 +204,10 @@
 [uoc_ri_difusio_noticia] other = "Report"
 [uoc_ri_difusio_esdeveniment] other = "Event"
 
-
 [uoc_ri_noticia] other = "#Report"
 [uoc_ri_esdeveniment] other = "#Event"
 
 [uoc_ri_esdeveniment_On] other = "Where"
 [uoc_ri_esdeveniment_Quan] other = "When"
-
 [uoc_ri_casos_link] other = "Link to the case of success"
 
