--- a/themes/uoc/i18n/en.toml
+++ b/themes/uoc/i18n/en.toml
@@ -121,7 +121,7 @@
 [uoc_ri_cercador_cercaper] other = "Search for:"
 [uoc_ri_cercador_cercapersector] other = "Search for productive sector:"
 [uoc_ri_cercador_esborrafiltres] other = "Remove filters"
-[uoc_ri_cercador_cercar] other = "Searchwords"
+[uoc_ri_cercador_cercar] other = "Search"
 
 [uoc_ri_cercador_filtres_ambitsespecialitzacio] other = "Specialization areas"
 [uoc_ri_cercador_filtres_ods] other = "ODS Objectives"
@@ -211,3 +211,5 @@
 [uoc_ri_esdeveniment_Quan] other = "When"
 [uoc_ri_casos_link] other = "Link to the case of success"
 
+[uoc_ri_cercador_llista_simple] other = "List view"
+[uoc_ri_cercador_llista_bloc] other = "Block view"
