--- a/themes/uoc/i18n/ca.toml
+++ b/themes/uoc/i18n/ca.toml
@@ -198,7 +198,7 @@ other = "Xarxa Vives d'Universitats"
 other = "European Universities Association (EUA)"
 
 [uoc_ri_ri_UOC] 
-other = "R&I a la UOC"
+other = "R&I a la UOC [ca]"
 [uoc_ri_menuitem_explore] 
 other = "Explora l'R&I a la UOC"
 [uoc_ri_menuitem_researchmap] 
